progs/tests/set/mismatch_types.sy
start :: fn {
    a: {int} = {1, "abc", 1.0}
    a
}

// error: #TypeMismatch(_, _)
